# nhs-website-content-api

./: .env  .gitignore  Makefile  README.md  example.env  manifest_template.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  test-report.xml
.devcontainer/: devcontainer.json  postCreateCommand.sh
azure/: api_development.md  azure-pr-pipeline.yml  azure-release-pipeline.yml  project.yml
azure/templates/: run-tests.yml
docs/: development.md
sandbox/: .prettierrc  Sandbox endpoints - localhost.md  app.js  app.spec.js  handlers.js  index.js  package-lock.json  package.json
sandbox/responses/: _curl-commands.txt  baby-caring-for-a-newborn-no-params.json  baby-first-aid-and-safety-no-params.json  baby-support-and-services-no-params.json  common-health-questions-accidents-first-aid-and-treatments-no-params.json  common-health-questions-caring-carers-and-long-term-conditions-no-params.json  common-health-questions-childrens-health-can-my-baby-go-swimming-before-or-after-vaccinations-no-params.json  common-health-questions-root-no-params.json  conditions-acanthosis-nigricans-no-params.json  conditions-achalasia-no-params.json  conditions-acne-modules-true.json  conditions-acne-no-params.json  conditions-angiography-no-params.json  conditions-cancer-no-params.json  conditions-category-a.json  conditions-category-b.json  conditions-page-2.json  conditions-root-category-a-genre-condition.json  conditions-root-category-a-genre-guide.json  (+71 more)
specification/: nhs-website-content-api.yaml  postman-collection.json
tests/: conftest.py  test_endpoints.py
(+67 files in other folders)
