[tool.poetry]
name = "nhs-website-content-api"
version = "2.2.0"
description = "TODO"
authors = ["TODO <todo@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/NHSDigital/nhs-website-content-api"
homepage = "https://digital.nhs.uk/developer/api-catalogue/nhs-website-content/v2"
keywords = ["healthcare", "uk", "nhs"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pytest-nhsd-apim = "^2.0.2"
requests = "2.27.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^3.7.9"
black = "^20.8b1"
pip-licenses = "^2.0.1"
jinja2 = "^2.11.1"
pyyaml = "^6.0"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^2.9.0"
gitpython = "^3.1.41"
pytest = "^6.1.2"
coverage = "^5.5"
aiohttp = "^3.8.6"
pytest-asyncio = "^0.14.0"
pre-commit = "^4.2.0"

[tool.poetry.scripts]
